# godot-ksni

./: Cargo.toml  README.md
examples/: tray_example.gd
src/: lib.rs
src/godot/: mod.rs  tray_icon.rs
src/menu/: item.rs  mod.rs
src/tray/: event.rs  ksni_impl.rs  mod.rs  state.rs
