[package]
name = "godot-ksni"
version = "0.1.0"
edition = "2024"
authors = ["yuna0x0 <yuna@yuna0x0.com>"]
license = "MIT OR Apache-2.0"
description = "A Godot GDExtension wrapper for ksni (StatusNotifierItem/AppIndicator)"
repository = "https://github.com/yuna0x0/godot-ksni"
keywords = ["godot", "gdextension", "tray", "statusnotifieritem", "appindicator"]
categories = ["gui", "game-development"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["gdextension"]
gdextension = []

[dependencies]
godot = "0.4.2"
ksni = { version = "0.3.1", features = ["blocking"] }
